<resources>
    <string name="app_name">XO Game</string>
    <string name="phone">Phone</string>
    <string name="you">You</string>
    <string name="reset">New Round</string>
    <string name="easy_level">Easy</string>
    <string name="medium_level">Medium</string>
    <string name="hard_level">Hard</string>
    <string name="two_player">Two Player</string>
    <string name="one_player">One Player</string>
    <string name="player">Player</string>
    <string name="have_fun_and_enjoy">Have Fun And Enjoy</string>
    <string name="level">Level</string>
    <string name="easy">Easy</string>
    <string name="_0">0</string>
    <string name="_n">:</string>
    <string name="medium">Medium</string>
    <string name="choose_the_level">Choose The Level</string>
    <string name="hard">Hard</string>

    <string name="Congratulations">Congratulations</string>
    <string name="you_win">You Win</string>
    <string name="you_win2">Keep Going Your Phone Challenge You!!</string>
    <string name="its_draw">Its Draw!</string>
    <string name="its_draw2">Nice Try</string>
    <string name="player_O_win">O Player</string>
    <string name="player_X_win">X Player</string>
    <string name="phone_win">Phone Win!</string>
    <string name="phone_win2">Oops!,</string>

    <string name="x_player">X player</string>
    <string name="new_round">new round</string>
    <string name="cancel">Cancel</string>
    <string name="see_ad">See Ad</string>

    <string name="let_s_watch_an_ad">Let\'s Watch An Ad To Make \n The Game A Little Easier</string>
    <string name="let_s_watch_an_ad2">Let\'s Watch Another Ad To Make \n The Game A More Easier</string>
    <string name="LoadingAd">Loading Ad..</string>
    <string name="TheGameBecameEasier">Great! The Game Became Easier Now</string>
    <string name="CanNotLoadAd">Can Not Load Ad, Please \n Check Your Internet Connection</string>

    <string name="help">HELP</string>
    <string name="choose_who_plays_first">Choose Who Plays First</string>
    <string name="start">Start Challenge</string>
    <string name="required">*Required*</string>
    <!--**********************************************************-->

</resources>
